lnet/klnds/o2iblnd/o2iblnd_cb.c
@@ -2572,6 +2572,31 @@ kiblnd_passive_connect(struct rdma_cm_id *cmid, void *priv, int priv_nob)
 	if (ni != NULL) {
 		net = (struct kib_net *)ni->ni_data;
 		rej.ibr_incarnation = net->ibn_incarnation;
+	} else {
+		if (ibdev->ibd_nnets == 0) {
+			rej.ibr_why = IBLND_REJECT_EARLY;
+			CNETERR("Can't accept conn from %s on %s (%s:%d:%pI4h): net for nid %s not added yet\n",
+				libcfs_nid2str(nid),
+				libcfs_nidstr(&net->ibn_ni->ni_nid),
+				ibdev->ibd_ifname, ibdev->ibd_nnets,
+				&ibdev->ibd_ifip,
+				libcfs_nid2str(reqmsg->ibm_dstnid));
+			goto failed;
+		}
+		list_for_each_entry(net, &ibdev->ibd_nets, ibn_list) {
+			if ((net->ibn_dev == ibdev) &&
+			    (net->ibn_ni != NULL) &&
+			    (net->ibn_ni->ni_state != LNET_NI_STATE_ACTIVE)) {
+				rej.ibr_why = IBLND_REJECT_EARLY;
+				CNETERR("Can't accept conn from %s on %s (%s:%d:%pI4h): nid %s not ready\n",
+				       libcfs_nid2str(nid),
+				       libcfs_nidstr(&net->ibn_ni->ni_nid),
+				       ibdev->ibd_ifname, ibdev->ibd_nnets,
+				       &ibdev->ibd_ifip,
+				       libcfs_nid2str(reqmsg->ibm_dstnid));
+				goto failed;
+			}
+		}
 	}
 
 	if (ni == NULL ||			/* no matching net */
@@ -3034,6 +3059,11 @@ kiblnd_rejected(struct kib_conn *conn, int reason, void *priv, int priv_nob)
 
 			case IBLND_REJECT_FATAL:
 				CERROR("%s rejected: o2iblnd fatal error\n",
+				       libcfs_nid2str(peer_ni->ibp_nid));
+				break;
+
+			case IBLND_REJECT_EARLY:
+				CNETERR("%s rejected: tried too early\n",
 				       libcfs_nid2str(peer_ni->ibp_nid));
 				break;
 
